test/tests/stages/13_floating-point_numbers/invalid_types/extra_credit/bitwise_shift_double.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[17]:
  int
  identifier(main)
  (
  void
  )
  {
  double
  identifier(d)
  =
  const double(5.0)
  <<
  const int(3)
  ;
  return
  const int(0)
  ;
  }
